add_executable(c02-big_num_add c02-big_num_add.cpp)

add_executable(c02-find_sum_using_set c02-find_sum_using_set.cpp)

add_executable(c02-find_sum_using_sort c02-find_sum_using_sort.cpp)

add_executable(c02-insert_sort c02-insert_sort.cpp)

add_executable(c02-merge_sort c02-merge_sort.cpp)

add_executable(c04-find_max_subarray c04-find_max_subarray.cpp)

add_executable(c06-heap_sort c06-heap_sort.cpp)

add_library(c06-priority_queue c06-priority_queue.cpp)

add_executable(c07-quick_sort_interval c07-quick_sort_interval.cpp)

add_executable(c07-quick_sort c07-quick_sort.cpp)

add_executable(c08-counting_sort c08-counting_sort.cpp)

add_executable(c08-bucket_sort c08-bucket_sort.cpp)

add_executable(c09-quick_select c09-quick_select.cpp)
