project(CLRS_code)

add_executable(c02-big_num_add c02-big_num_add.cpp)

add_executable(c02-find_sum_using_set c02-find_sum_using_set.cpp)

add_executable(c02-find_sum_using_sort c02-find_sum_using_sort.cpp)

add_executable(c02-insert_sort c02-insert_sort.cpp)

add_executable(c02-merge_sort c02-merge_sort.cpp)

add_executable(c04-find_max_subarray c04-find_max_subarray.cpp)

add_executable(c06-heap_sort c06-heap_sort.cpp)

add_library(c06-priority_queue c06-priority_queue.cpp)

add_executable(c07-quick_sort_interval c07-quick_sort_interval.cpp)

add_executable(c07-quick_sort c07-quick_sort.cpp)

add_executable(c08-counting_sort c08-counting_sort.cpp)

add_executable(c08-bucket_sort c08-bucket_sort.cpp)

add_executable(c09-quick_select c09-quick_select.cpp)

add_executable(c10-traverse_tree c10-traverse_tree.cpp)

add_executable(c12-binary_tree c12-binary_tree.cpp)

add_executable(c15-lcs_length c15-lcs_length.cpp)

add_executable(c15-rot_cut c15-rot_cut.cpp)

add_executable(c16-01knapsack_problem c16-01knapsack_problem.cpp)

add_executable(c16-huffman_tree c16-huffman_tree.cpp)
